# sentiment-deep-lstm

./: README.md  config.py  main.py  pyproject.toml
app/: main.py  schemas.py  sentiment_classifier.py
sentiment_model/variables/: variables.index
small_bert_L6_H128_A2/variables/: variables.index
src/: sentiment_classifier.py
tests/: test_sentiment_classifier.py
