[tool.poetry]
name = "sentiment-classification-model"
version = "0.1.0"
description = ""
authors = ["steekam <waynewanyee@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.2"
tensorflow = "^2.3.1"
uvicorn = "^0.12.2"
tensorflow-text = "^2.4.3"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pylint = "^2.6.0"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
